MC-20066: Add a case to anti-XSS docs
- Added case to anti-xss markdown file
- Removed template security file
- Updated reference to template security page to xss-protection page

--- a/_data/toc/frontend-developer-guide.yml
+++ b/_data/toc/frontend-developer-guide.yml
@@ -99,8 +99,8 @@ pages:
         - label: Customize email templates
           url: /frontend-dev-guide/templates/template-email.html
 
-        - label: Templates XSS security
-          url: /frontend-dev-guide/templates/template-security.html
+        - label: XSS prevention strategies
+          url: /extension-dev-guide/xss-protection.html
 
     - label: Cascading style sheets (CSS)
       url: /frontend-dev-guide/css-topics/css-overview.html
